--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg  bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg  bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="images/geeks-png.png" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="images/geeks-png.Png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list text-#311291" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
               </svg></span>
           </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ">
+                <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                     <a class="nav-link" href="#Geeksdetail">About-Geeks</a>
                     <a class="nav-link" href="#Teamdetail">Our Team</a>
@@ -109,73 +109,69 @@
         <div class="container-fluid seniorbg">
             <div class="container seniormember">
                 <h1 class="text-center">Senior Executive Member</h1>
-                <div class="row row-6">
-                    <div class="col-md-3 col-sm-6 img-2">
+                <div class="row row-6  row-cols-md-2 row-cols-lg-4 row-cols-1">
+                    <div class="col photos">
                         <img src="images/gaurav-sir-1.png" alt="">
                         <h2>Varad Khokle</h2>
                     </div>
-                    <div class="col-md-3  col-sm-6 img-2">
+                    <div class="col photos">
                         <img src="images/rishab sir-1.png" alt="">
                         <h2>Shubham Devrani</h2>
                     </div>
-                    <div class="col-md-3 col-sm-6  img-2">
+                    <div class="col photos">
                         <img src="images/gaurav-sir-1.png" alt="">
                         <h2>Vishal Sir</h2>
                     </div>
-                    <div class="col-md-3 col-sm-6 img-2">
+                    <div class="col photos">
                         <img src="images/rishab sir-1.png" alt="">
                         <h2>Chirag Sir</h2>
                     </div>
-                </div>
-                <div class="row row-7">
-                    <div class="col-md-3 col-sm-6 img-2">
+                    <div class="col photos">
                         <img src="images/gaurav-sir-1.png" alt="">
                         <h2>Stuti Mam</h2>
                     </div>
-                    <div class="col-md-3 col-sm-6 img-2">
+                    <div class="col photos">
                         <img src="images/rishab sir-1.png" alt="">
                         <h2>Ayushman pathak</h2>
                     </div>
-                    <div class="col-md-3 col-sm-6 img-2">
+                    <div class="col  photos">
                         <img src="images/gaurav-sir-1.png" alt="">
                         <h2>Himanshu Sir</h2>
                     </div>
-                    <div class="col-md-3 col-sm-6 img-2">
+                    <div class="col photos">
                         <img src="images/rishab sir-1.png" alt="">
                         <h2>Vanshika Mam</h2>
                     </div>
                 </div>
                 <h1 class="text-center">Junior Executive Member</h1>
-                <div class="row row-8">
-                    <div class="col-sm-4  img-3">
+                <div class="row row-8 row-cols-lg-3 row-cols-md-2 row-cols-1">
+                    <div class="col  photos img-2">
                         <img src="images/gaurav-sir-1.png" alt="">
                         <h2>Adarsh</h2>
                     </div>
-                    <div class="col-sm-4  img-3">
+                    <div class="col photos img-2">
                         <img src="images/rishab sir-1.png" alt="">
                         <h2>Alok Dwivedi</h2>
                     </div>
-                    <div class="col-sm-4  img-3">
+                    <div class="col  photos img-2">
                         <img src="images/gaurav-sir-1.png" alt="">
-                        <h2>Naya Das</h2>
+                        <h2>Nayan Das</h2>
                     </div>
-
-                </div>
-                <div class="row row-9">
-                    <div class="col-sm-4 img-3">
-                        <img src="images/gaurav-sir-1.png" alt="">
+                    <div class="col photos img-2">
+                        <img src="images/nupur (3).png" alt="">
                         <h2>Nupur Sapra</h2>
                     </div>
-                    <div class="col-sm-4   img-3">
+                    <div class="col  photos img-2">
                         <img src="images/rishab sir-1.png" alt="">
                         <h2>Shobhit Rawat</h2>
                     </div>
-                    <div class="col-sm-4  img-3">
+                    <div class="col photos img-2">
                         <img src="images/gaurav-sir-1.png" alt="">
                         <h2>Sapna Jha</h2>
                     </div>
 
                 </div>
+
             </div>
         </div>
     </section>
@@ -263,22 +259,22 @@
     <footer>
         <div class="container-fluid">
             <div class="container" id="Footerid">
-                <div class="row row-13">
-                    <div class="col-md-3 footercol institute">
+                <div class="row row-13 row-cols-lg-4 row-cols-1">
+                    <div class="col footercol institute">
                         <h2 class="text-white">Institute</h2>
                         <p class="text-muted">RJIT-Rustamji Institute Of Technology.</p>
                         <p class="text-muted">An Institute Of Border Security Force Takenpur,Gwalior-475005</p>
                     </div>
-                    <div class="col-md-3 footercol">
+                    <div class="col footercol">
                         <h2 class="text-white">Email</h2>
                         <p class="text-muted">collgeemail@gmail.com</p>
                     </div>
-                    <div class="col-md-3 footercol">
+                    <div class="col footercol">
                         <h2 class="text-white">Phone No.</h2>
                         <p class="text-muted">1234567891</p>
                         <p class="text-muted">1234567891</p>
                     </div>
-                    <div class="col-md-3 footercol">
+                    <div class="col footercol">
                         <h2 class="text-white">Follow Us</h2>
                         <p class="text-muted">Let us be social</p>
                         <ul class="footericons">
