--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <nav class="navbar  navbar-expand-lg  bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg  bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="images/geeks-png.Png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
